cleaned up files and replaced images

--- a/contact.html
+++ b/contact.html
@@ -59,9 +59,9 @@
 
     <div class="col-md-3 mt-5 offset-md-1 bg-white border size">
       <h3 class="border-bottom py-3 text-center color">Connect with Me</h3>
-        <a class="offset-md-1" href="https://github.com/"><img class="pt-2 mt-3 mx-auto" src="http://ucdavis.bootcampcontent.com/ucdavis-boot-camp/UCDVSAC201711FSF2-Class-Repository-FSF/raw/master/Class-Content/01-html-git-css/02-Homework/Solutions/recommended-homework-solution/bonus/assets/images/github-128.png" height=70 alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/"><img class="pt-2 mt-3" src="http://ucdavis.bootcampcontent.com/ucdavis-boot-camp/UCDVSAC201711FSF2-Class-Repository-FSF/raw/master/Class-Content/01-html-git-css/02-Homework/Solutions/recommended-homework-solution/bonus/assets/images/linkedin-128.png" height=70 alt="LinkedIn" /></a>
-        <a href="https://stackoverflow.com/"><img class="pt-2 mt-3" src="http://ucdavis.bootcampcontent.com/ucdavis-boot-camp/UCDVSAC201711FSF2-Class-Repository-FSF/raw/master/Class-Content/01-html-git-css/02-Homework/Solutions/recommended-homework-solution/bonus/assets/images/stackoverflow-128.png" height=70 alt="Stack Overflow" /></a>
+        <a class="offset-md-1" href="https://github.com/"><img class="pt-2 mt-3 mx-auto" src="github-128.png" height=70 alt="GitHub" /></a>
+        <a href="https://www.linkedin.com/"><img class="pt-2 mt-3" src="linkedin-128.png" height=70 alt="LinkedIn" /></a>
+        <a href="https://stackoverflow.com/"><img class="pt-2 mt-3" src="stackoverflow-128.png" height=70 alt="Stack Overflow" /></a>
     </div>
   </div>
 </div>
