--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
     <div class="col-md-6 bg-white mt-5 border">
     
         <h1 class="my-4 border-bottom py-3 color">About Me</h1>
-        <img class="cat" src="http://ucdavis.bootcampcontent.com/ucdavis-boot-camp/UCDVSAC201711FSF2-Class-Repository-FSF/raw/master/Class-Content/01-html-git-css/02-Homework/Solutions/recommended-homework-solution/assets/images/cat.jpg" alt="cat">
+        <img class="cat" src="cat.jpg" alt="cat">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi molestiae ipsum deserunt eligendi sit aut odio repudiandae quis, a recusandae, provident adipisci numquam molestias officiis amet laboriosam doloribus natus itaque.
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia omnis amet vitae nobis autem nisi, laudantium numquam laboriosam reiciendis suscipit voluptate vel excepturi, veritatis alias ipsam neque, cum aperiam voluptas!</p>
     </div>
 
     <div class="col-md-3 mt-5 offset-md-1 bg-white border size">
       <h3 class="border-bottom py-3 text-center color">Connect with Me</h3>
-        <a class="offset-md-1" href="https://github.com/"><img class="pt-2 mt-3 mx-auto" src="http://ucdavis.bootcampcontent.com/ucdavis-boot-camp/UCDVSAC201711FSF2-Class-Repository-FSF/raw/master/Class-Content/01-html-git-css/02-Homework/Solutions/recommended-homework-solution/bonus/assets/images/github-128.png" height=70 alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/"><img class="pt-2 mt-3" src="http://ucdavis.bootcampcontent.com/ucdavis-boot-camp/UCDVSAC201711FSF2-Class-Repository-FSF/raw/master/Class-Content/01-html-git-css/02-Homework/Solutions/recommended-homework-solution/bonus/assets/images/linkedin-128.png" height=70 alt="LinkedIn" /></a>
-        <a href="https://stackoverflow.com/"><img class="pt-2 mt-3" src="http://ucdavis.bootcampcontent.com/ucdavis-boot-camp/UCDVSAC201711FSF2-Class-Repository-FSF/raw/master/Class-Content/01-html-git-css/02-Homework/Solutions/recommended-homework-solution/bonus/assets/images/stackoverflow-128.png" height=70 alt="Stack Overflow" /></a>
+        <a class="offset-md-1" href="https://github.com/"><img class="pt-2 mt-3 mx-auto" src="github-128.png" height=70 alt="GitHub" /></a>
+        <a href="https://www.linkedin.com/"><img class="pt-2 mt-3" src="linkedin-128.png" height=70 alt="LinkedIn" /></a>
+        <a href="https://stackoverflow.com/"><img class="pt-2 mt-3" src="stackoverflow-128.png" height=70 alt="Stack Overflow" /></a>
     </div>
   </div>
 </div>
