--- a/portfolio.html
+++ b/portfolio.html
@@ -31,44 +31,49 @@
 
  <div class="container">
 
-  <div class="row">
+  <div class="row mb-2">
 
-    <div class="col-md-7 bg-white mt-4 border">
+    <div class="col-md-7 bg-white mt-4 mb-4 border">
       <h2 class="border-bottom py-3 ml-3 color">Portfolio</h2>
      <div class="work">
-      <img src="http://ucdavis.bootcampcontent.com/ucdavis-boot-camp/UCDVSAC201711FSF2-Class-Repository-FSF/raw/master/Class-Content/01-html-git-css/02-Homework/Solutions/recommended-homework-solution/assets/images/technics-q-c-640-480-1.jpg" class="mr-2" alt="porfolio pic">
+      <img src="technics-q-c-640-480-1.jpg" class="mr-2" alt="porfolio pic">
       <h4>Hangman</h4>
     </div>
     <div class="work">
-      <img src="http://ucdavis.bootcampcontent.com/ucdavis-boot-camp/UCDVSAC201711FSF2-Class-Repository-FSF/raw/master/Class-Content/01-html-git-css/02-Homework/Solutions/recommended-homework-solution/assets/images/technics-q-c-640-480-2.jpg" class="" alt="portfolio pic">
+      <img src="technics-q-c-640-480-2.jpg" class="" alt="portfolio pic">
       <h4>RPG Game</h4>
     </div>
     <div class="work">
-      <img src="http://ucdavis.bootcampcontent.com/ucdavis-boot-camp/UCDVSAC201711FSF2-Class-Repository-FSF/raw/master/Class-Content/01-html-git-css/02-Homework/Solutions/recommended-homework-solution/assets/images/technics-q-c-640-480-5.jpg" class="" alt="portfolio pic">
+      <img src="technics-q-c-640-480-5.jpg" class="" alt="portfolio pic">
       <h4>Trivia Game</h4>
     </div>
     <div class="work">
-      <img src="http://ucdavis.bootcampcontent.com/ucdavis-boot-camp/UCDVSAC201711FSF2-Class-Repository-FSF/raw/master/Class-Content/01-html-git-css/02-Homework/Solutions/recommended-homework-solution/assets/images/technics-q-c-640-480-7.jpg" class="" alt="portfolio pic">
+      <img src="technics-q-c-640-480-7.jpg" class="" alt="portfolio pic">
       <h4>Rutgers Info Widget</h4>
     </div>
-    <div class="work">
-      <img src="http://ucdavis.bootcampcontent.com/ucdavis-boot-camp/UCDVSAC201711FSF2-Class-Repository-FSF/raw/master/Class-Content/01-html-git-css/02-Homework/Solutions/recommended-homework-solution/assets/images/technics-q-c-640-480-9.jpg" alt="portfolio pic">
+    <div class="work mb-4 pb-2">
+      <img src="technics-q-c-640-480-9.jpg" alt="portfolio pic">
       <h4>Rock Paper Scissors</h4>
     </div>
 
     </div>
 
-    <div class="col-md-3 mt-5 offset-md-1 bg-white border size">
+   <div class="col-md-3 mt-5 offset-md-1 bg-white border size">
       <h3 class="border-bottom py-3 text-center color">Connect with Me</h3>
-        <a class="offset-md-1" href="https://github.com/"><img class="pt-2 mt-3 mx-auto" src="http://ucdavis.bootcampcontent.com/ucdavis-boot-camp/UCDVSAC201711FSF2-Class-Repository-FSF/raw/master/Class-Content/01-html-git-css/02-Homework/Solutions/recommended-homework-solution/bonus/assets/images/github-128.png" height=70 alt="GitHub" /></a>
-        <a href="https://www.linkedin.com/"><img class="pt-2 mt-3" src="http://ucdavis.bootcampcontent.com/ucdavis-boot-camp/UCDVSAC201711FSF2-Class-Repository-FSF/raw/master/Class-Content/01-html-git-css/02-Homework/Solutions/recommended-homework-solution/bonus/assets/images/linkedin-128.png" height=70 alt="LinkedIn" /></a>
-        <a href="https://stackoverflow.com/"><img class="pt-2 mt-3" src="http://ucdavis.bootcampcontent.com/ucdavis-boot-camp/UCDVSAC201711FSF2-Class-Repository-FSF/raw/master/Class-Content/01-html-git-css/02-Homework/Solutions/recommended-homework-solution/bonus/assets/images/stackoverflow-128.png" height=70 alt="Stack Overflow" /></a>
+        <a class="offset-md-1" href="https://github.com/"><img class="pt-2 mt-3 mx-auto" src="github-128.png" height=70 alt="GitHub" /></a>
+        <a href="https://www.linkedin.com/"><img class="pt-2 mt-3" src="linkedin-128.png" height=70 alt="LinkedIn" /></a>
+        <a href="https://stackoverflow.com/"><img class="pt-2 mt-3" src="stackoverflow-128.png" height=70 alt="Stack Overflow" /></a>
     </div>
   </div>
 </div>
 
 
   </div>
+<div class="footer3">
+  
+  <div class="row h-25">
+    <div class="col-md-12">
+      <p class="text-center">@ Copyright 2018 Tejinder Bains</p>
 
 
     <!-- Optional JavaScript -->
